Prevent overflow on small screens
Unset the changes to html on small screens to prevent situations where parts of words overflow screen slightly.

--- a/css/seenet.scss
+++ b/css/seenet.scss
@@ -183,6 +183,10 @@ sup {
 
 /* Responsive display for smaller devices */
 @media only screen and (max-width:700px) {
+    html {
+	width:unset;
+	overflow-x:unset;
+    }
     nav, main {
         display:block;
         width:100%;
